@@ -10,11 +10,11 @@ Subject: gammaray-probe-versioned-soname
  4 files changed, 4 insertions(+), 2 deletions(-)
 
 diff --git a/CMakeLists.txt b/CMakeLists.txt
-index 28a16ce..76e8862 100644
+index f2055bb..4bbee30 100644
 --- a/CMakeLists.txt
 +++ b/CMakeLists.txt
 @@ -28,6 +28,7 @@ set(GAMMARAY_VERSION_MINOR "2")
- set(GAMMARAY_VERSION_PATCH "1")
+ set(GAMMARAY_VERSION_PATCH "2")
  set(GAMMARAY_VERSION "${GAMMARAY_VERSION_MAJOR}.${GAMMARAY_VERSION_MINOR}.${GAMMARAY_VERSION_PATCH}")
  set(GAMMARAY_VERSION_STRING "${GAMMARAY_VERSION}")
 +set(GAMMARAY_PROBE_SOVERSION "${GAMMARAY_VERSION_STRING}")
@@ -22,7 +22,7 @@ index 28a16ce..76e8862 100644
  set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
  
 diff --git a/config-gammaray.h.cmake b/config-gammaray.h.cmake
-index 53cf750..faa0803 100644
+index 0236a7c..2bda83c 100644
 --- a/config-gammaray.h.cmake
 +++ b/config-gammaray.h.cmake
 @@ -1,5 +1,6 @@
@@ -33,10 +33,10 @@ index 53cf750..faa0803 100644
  #define GAMMARAY_BUILD_DIR "${CMAKE_BINARY_DIR}"
  
 diff --git a/core/CMakeLists.txt b/core/CMakeLists.txt
-index 2ede848..6aadfbf 100644
+index b49d795..10d81e3 100644
 --- a/core/CMakeLists.txt
 +++ b/core/CMakeLists.txt
-@@ -167,6 +167,6 @@ target_link_libraries(gammaray_probe
+@@ -172,6 +172,6 @@ target_link_libraries(gammaray_probe
  if(NOT WIN32)
    target_link_libraries(gammaray_probe dl)
  endif()
